Implementacion de la funcionalidad de favoritos